Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.2.3
Description
How to repeat:
1. Start server with --sql_mode='STRICT_TRANS_TABLES'
2. Execute the following commands:
MariaDB [test]> create table t1(a TEXT not null) ROW_FORMAT=DYNAMIC;
|
Query OK, 0 rows affected (0.02 sec)
|
|
|
MariaDB [test]> create index idx1 on t1(a(3073));
|
ERROR 2013 (HY000): Lost connection to MySQL server during query
|
Stacktrace:
2017-02-04 21:32:18 140557726610176 [Note] InnoDB: Online DDL : Start applying row log
|
2017-02-04 21:32:18 140557726610176 [Note] InnoDB: Online DDL : End of applying row log
|
2017-02-04 21:32:18 140557726610176 [Note] InnoDB: Online DDL : Completed
|
mysqld: /home/nirbhay/project/git-repo/mariadb/10.2/sql/sql_error.cc:380: void Diagnostics_area::set_ok_status(ulonglong, ulonglong, const char*): Assertion `!is_set() || (m_status == DA_OK_BULK && is_bulk_op())' failed.
|
170204 21:32:18 [ERROR] mysqld got signal 6 ;
|
This could be because you hit a bug. It is also possible that this binary
|
or one of the libraries it was linked against is corrupt, improperly built,
|
or misconfigured. This error can also be caused by malfunctioning hardware.
|
|
|
To report this bug, see https://mariadb.com/kb/en/reporting-bugs
|
|
|
We will try our best to scrape up some info that will hopefully help
|
diagnose the problem, but since we have already crashed,
|
something is definitely wrong and this may fail.
|
|
|
Server version: 10.2.4-MariaDB-debug
|
key_buffer_size=134217728
|
read_buffer_size=131072
|
max_used_connections=1
|
max_threads=153
|
thread_count=7
|
It is possible that mysqld could use up to
|
key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 467287 K bytes of memory
|
Hope that's ok; if not, decrease some variables in the equation.
|
|
|
Thread pointer: 0x0x7fd604417070
|
Attempting backtrace. You can use the following information to find out
|
where mysqld died. If you see no messages after this, something went
|
terribly wrong...
|
stack_bottom = 0x7fd6255d6a80 thread_stack 0x48c00
|
./bin/mysqld(my_print_stacktrace+0x38)[0x558e471ce1cb]
|
addr2line: './bin/mysqld': No such file
|
./bin/mysqld(handle_fatal_signal+0x3a3)[0x558e46a3b896]
|
/lib/x86_64-linux-gnu/libpthread.so.0(+0x11390)[0x7fd62390b390]
|
/lib/x86_64-linux-gnu/libc.so.6(gsignal+0x38)[0x7fd622cc5428]
|
/lib/x86_64-linux-gnu/libc.so.6(abort+0x16a)[0x7fd622cc702a]
|
/lib/x86_64-linux-gnu/libc.so.6(+0x2dbd7)[0x7fd622cbdbd7]
|
/lib/x86_64-linux-gnu/libc.so.6(+0x2dc82)[0x7fd622cbdc82]
|
./bin/mysqld(_ZN16Diagnostics_area13set_ok_statusEyyPKc+0x89)[0x558e467a7961]
|
./bin/mysqld(_Z5my_okP3THDyyPKc+0x4e)[0x558e4675cd0d]
|
./bin/mysqld(_Z17mysql_alter_tableP3THDPcS1_P14HA_CREATE_INFOP10TABLE_LISTP10Alter_infojP8st_orderb+0x2931)[0x558e468a5893]
|
./bin/mysqld(_Z21mysql_execute_commandP3THD+0x2f9a)[0x558e467d5366]
|
./bin/mysqld(_Z11mysql_parseP3THDPcjP12Parser_statebb+0x29d)[0x558e467e184b]
|
./bin/mysqld(_Z16dispatch_command19enum_server_commandP3THDPcjbb+0xf2f)[0x558e467cf6a1]
|
./bin/mysqld(_Z10do_commandP3THD+0x712)[0x558e467ce092]
|
./bin/mysqld(_Z24do_handle_one_connectionP7CONNECT+0x1ca)[0x558e469165b1]
|
./bin/mysqld(handle_one_connection+0x30)[0x558e46916331]
|
/lib/x86_64-linux-gnu/libpthread.so.0(+0x76ba)[0x7fd6239016ba]
|
/lib/x86_64-linux-gnu/libc.so.6(clone+0x6d)[0x7fd622d9682d]
|
|
|
Trying to get some variables.
|
Some pointers may be invalid and cause the dump to abort.
|
Query (0x7fd604461088): create index idx1 on t1(a(3073))
|
Connection ID (thread ID): 7
|
Status: NOT_KILLED
|
|
|
Optimizer switch: index_merge=on,index_merge_union=on,index_merge_sort_union=on,index_merge_intersection=on,index_merge_sort_intersection=off,engine_condition_pushdown=off,index_condition_pushdown=on,derived_merge=on,derived_with_keys=on,firstmatch=on,loosescan=on,materialization=on,in_to_exists=on,semijoin=on,partial_match_rowid_merge=on,partial_match_table_scan=on,subquery_cache=on,mrr=off,mrr_cost_based=off,mrr_sort_keys=off,outer_join_with_cache=on,semijoin_with_cache=on,join_cache_incremental=on,join_cache_hashed=on,join_cache_bka=on,optimize_join_buffer_size=off,table_elimination=on,extended_keys=on,exists_to_in=on,orderby_uses_equalities=on,condition_pushdown_for_derived=on
|
|
|
The manual page at http://dev.mysql.com/doc/mysql/en/crashing.html contains
|
information that should help you find out what is causing the crash.
|
Aborted (core dumped)
|
Attachments
Issue Links
- relates to
-
MDEV-7635 update defaults and simplify mysqld config parameters
-
- Closed
-