MDEV-11995 ALTER TABLE proceeds despite reporting ER_TOO_LONG_KEY error

automatic shortening of a too-long non-unique key should
be not a warning, but a note. It's a normal optimization,
doesn't affect correctness, and should never be converted to
an error, no matter how strict sql_mode is.